# Parallel-Society

./: Governance-Agent-on-Logos.md  LICENSE  Parallel-Society-Pitch-Script.md  README.md  package.json
agent/: governance-agent.ts
contracts/ethereum/: TIMEToken.sol
contracts/near/: Cargo.toml  time_token.rs
docs/: ARCHITECTURE.md  LOCAL-ALLOCATION.md  PARALLEL-SOCIETY.md  TIME-SPECIFICATION.md  WAKU-INTEGRATION.md
